# scout-rs

./: Cargo.toml  LICENSE  README.md
src/: commands.rs  filter.rs  main.rs  types.rs  utils.rs
