[package]
name = "scout"
version = "0.1.0"
edition = "2021"
description = "Fast file finder for AI agents"
license = "MIT"
repository = "https://github.com/vikramships/scout-rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# JSON output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Fast file walking with .gitignore support
ignore = "0.4"

# Glob matching (faster than regex)
glob-match = "0.2"

# Parallel processing (ignore crate uses rayon internally)
num_cpus = "1"

# Regex for content search
regex = "1"

# Error handling
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
